Started to create basic auth structure

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Gustavo Saboia",
   "license": "ISC",
   "dependencies": {
+    "basic-auth": "^2.0.1",
     "express": "^4.16.4"
   },
   "devDependencies": {
