Testing Author controller class

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "license": "ISC",
   "dependencies": {
     "basic-auth": "^2.0.1",
-    "express": "^4.16.4"
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "mongoose": "^5.5.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.3",
