--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev": "nodemon --exec babel-node ./src/app",
     "build": "babel src --out-dir dist",
     "start": "node ./dist/app",
-    "test": "jest --verbose"
+    "test": "jest --verbose --forceExit"
   },
   "author": "Gustavo Saboia",
   "license": "ISC",
@@ -24,7 +24,9 @@
     "@babel/cli": "^7.4.3",
     "@babel/core": "^7.4.3",
     "@babel/node": "^7.2.2",
+    "@babel/plugin-transform-runtime": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
+    "@babel/runtime": "^7.4.3",
     "babel-jest": "^24.7.1",
     "jest": "^24.7.1",
     "mock-req-res": "^1.0.5",
