--- a/package.json
+++ b/package.json
@@ -15,23 +15,23 @@
   "author": "Gustavo Saboia",
   "license": "ISC",
   "dependencies": {
-    "basic-auth": "^2.0.1",
-    "body-parser": "^1.18.3",
-    "express": "^4.16.4",
-    "mongoose": "^5.5.0"
+    "basic-auth": "2.0.1",
+    "body-parser": "1.18.3",
+    "express": "4.16.4",
+    "mongoose": "5.5.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.3",
-    "@babel/core": "^7.4.3",
-    "@babel/node": "^7.2.2",
-    "@babel/plugin-transform-runtime": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
-    "@babel/runtime": "^7.4.3",
-    "babel-jest": "^24.7.1",
-    "jest": "^24.7.1",
-    "mock-req-res": "^1.0.5",
-    "nodemon": "^1.18.10",
-    "sinon": "^7.3.1",
-    "sinon-express-mock": "^2.2.0"
+    "@babel/cli": "7.4.3",
+    "@babel/core": "7.4.3",
+    "@babel/node": "7.2.2",
+    "@babel/plugin-transform-runtime": "7.4.3",
+    "@babel/preset-env": "7.4.3",
+    "@babel/runtime": "7.4.3",
+    "babel-jest": "24.7.1",
+    "jest": "24.7.1",
+    "mock-req-res": "1.0.5",
+    "nodemon": "1.18.10",
+    "sinon": "7.3.1",
+    "sinon-express-mock": "2.2.0"
   }
 }
