--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "basic-auth": "2.0.1",
     "body-parser": "1.18.3",
     "express": "4.16.4",
+    "lodash": "^4.17.11",
     "mongoose": "5.5.0"
   },
   "devDependencies": {
